fix inline-box not vertically aligned

--- a/WLCSC/src/index.css
+++ b/WLCSC/src/index.css
@@ -503,6 +503,8 @@ input:focus + .slider {
   margin-bottom: 10px;
   margin-left: 25px ;
   margin-right: 25px ;
+
+  vertical-align:top;
 }
 .AdvCard p{
   margin-left: 10px;
